Add species retrieval endpoint, make swagger adjustments
