# mobile_api/urls.py
@@ -14,8 +14,7 @@ urlpatterns = [
     path('password-reset/verify-code/<str:encoded_pk>', PasswordResetCodeVerifyView.as_view(), name='password-reset-code-verify'),
     path('password-reset-confirm/<str:encoded_pk>/<str:token>', PasswordResetConfirmView.as_view(), name='password-reset-confirm'),
 
-    # path('species', UserGetMeView.as_view(), name='get-species'),
-    # receive animal type (dog, cat, ...), return the respective array from json
+    path('species', GetSpeciesView.as_view(), name='get-species'),
 
     path('user/me', UserGetMeView.as_view(), name='user-me'),
     # path('user/edit', UserGetMeView.as_view(), name='user-me'),
